snapshot-tests/tests/snapshots/parser__redefine__table_then_dotted.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[DuplicateKey]: the key `b` is defined multiple times at `a.b`
  ┌─ table_then_dotted:4:12
  │
3 │         b = {}
  │         - first key instance
4 │         [a.b]
  │            ^ duplicate key
